--- a/uzduotys/uzduotis2/Zygis/2/main.css
+++ b/uzduotys/uzduotis2/Zygis/2/main.css
@@ -23,3 +23,41 @@ a:hover{
     background-color: yellow;
     transition: 0.5s;
 }
+
+.test{
+    width: 500px;
+    height:300px;
+    background: #676470;
+    transition: all 0.7s ease;
+}
+/*
+.fade{
+    opacity: 0.5;
+}
+
+.fade:hover{
+    opacity: 1;
+}
+
+.color:hover{
+    background: #53a7ea;
+}*/
+
+/*.shrink:hover{
+    -webkit-transform: scale(0.8);
+    -ms-transform: scale(0.8);
+    transform: scale(0.8);
+}*/
+
+
+/*by defeult veikia tik safari*/
+/*
+rotate:hover{  
+    -webkit-transform: rotateZ(-30deg);
+    -ms-transform: rotateZ(-30deg);
+    transform: rotateZ(-30deg);
+}*/
+
+.circle:hover{
+    border-radius: 50%;
+}
