--- a/uzduotys/uzduotys3-CSS/tautvydas/2/css/main.css
+++ b/uzduotys/uzduotys3-CSS/tautvydas/2/css/main.css
@@ -7,3 +7,24 @@
 h1 {
   color: rgb(0, 58, 187);
 }
+ body {
+   width: 1024px;
+   margin-left: auto;
+   margin-right: auto;
+
+   background-color: #e2e2e2;
+ }
+
+
+header {
+  background-color: #f68 ;
+  height: 50px;
+}
+#wrapper {
+  background-color: #fff;
+  height: 300px;
+}
+footer {
+  height: 60px;
+  background-color: #ed3;
+}
