--- a/uzduotys/uzduotys3-CSS/zygis/2/css/main.css
+++ b/uzduotys/uzduotys3-CSS/zygis/2/css/main.css
@@ -1,8 +1,12 @@
 html {
     width: 80%;
     margin: 0 auto;
+    background-color: #c6c1ca;
 }
 
+* {
+    box-sizing: border-box; 
+}
 
 h1{
     text-align: center;
@@ -19,10 +23,10 @@ header{
 
 nav li{
     float: left;
-    list-style-type: none;
     height: inherit;
     line-height: 50px;
     margin: 0 20px 0 20px;
+    list-style-type: none;
 
 }
 
@@ -31,18 +35,48 @@ nav a{
     color: #000000; 
 }
 
-form {
+.search {
     height: inherit;
     line-height: 50px;
+    float: right;
+    margin-right: 20px;
+}
+
+.wrapper {
+    position: relative;
+    /*overflow: hidden;*/
+    width: 100%;
+    margin-right: 0;
 }
 
 article {
-    width: 75%;
-    float: left;
+    width: 74.5%;
+    margin: 0 0 0 0;
+    display: inline-block;
+    background-color: #ffffff;
 }
 
 aside {
-    width: 25%;
-    float: left;
+    width: 24.5%;
     background-color: #c541aa;
+    margin-left: 1%;
+    position: absolute;
+    right: 0;
+    top: 0;
+    height: 100%;
+}
+
+aside h2 {
+    text-align: center;
+}
+
+footer {
+    background-color: #fff;
+    height: 50px;
+    line-height: 50px;
+    margin-top: 10px;
+}
+
+footer p{
+    margin: 0;
 }
