--- a/uzduotys/uzduotys3-CSS/Paulius/2 uzduotis tesiam nuo Tautvio/css/main.css
+++ b/uzduotys/uzduotys3-CSS/Paulius/2 uzduotis tesiam nuo Tautvio/css/main.css
@@ -4,51 +4,84 @@
   box-sizing: border-box;
 
 }
-/====================*VEIKIA VISAM FAILUI ============*/
+/*/====================VEIKIA VISAM FAILUI ============*/
+
 a {
     color: black;
     text-decoration: none;
 }
 
 h1 {
-  color: rgb(0, 58, 187);
+  color: white;
+  text-shadow: 0px 0px 20px black;
+    text-align: center;
 }
  body {
    width: 1024px;
    margin-left: auto;
    margin-right: auto;
-
    background-color: #e2e2e2;
  }
 
-/* ==========HEASDER=========*/
+/* ==========HEADER=========*/
 header {
-  background-color: #f68 ;
+  background-color: #f68;
   height: 50px;
+    
 }
 /*NAV TAI MUSU MENIU*/
 nav {
     width: 66%;
     font-size: 27px;
-
+    
 }
 nav ul {
     padding: 0;
     margin: 0;
+    
 }
 nav li {
     width: 21%;
     text-align: center;
     line-height: 50px;
     vertical-align: middle;
+    float: left;
+    
 }
 #search {
     width: 34%;
+    float: right;
+}
+
+form {
+    float: right;
+    padding: 5px 10px;
+}
+
+#search button {
+    background-color: #000;
+    color:#FFF;
+    padding: 9px 20px;
+    border: none;
+
+}
+
+.searchbox {
+    width: 240px;
+    height: 35px;
+}
+
+input {
+    padding: 7px;
+    
 }
 /*======END header==========*/
 #wrapper {
   background-color: #fff;
   min-height: 300px;
+  overflow: hidden;
+    width: 100%;
+  
 }
 section {
   width: 70%;
@@ -60,6 +93,9 @@ aside {
   width: 30%;
   background-color: #fa9;
   float: right;
+  padding-bottom: 100%;
+  margin-bottom: -100%;
+/*    PADDING, MARGIN Bottom + OVERFLOW panaudojami teve*/
 }
 .clear-float {
   clear: both;
@@ -77,5 +113,8 @@ footer {
   background-color: #ed3;
 }
 
+#search {
+    padding: 5px;
+}
 
 
