--- a/uzduotys/uzduotys3-CSS/Mantas/namuose/css/main.css
+++ b/uzduotys/uzduotys3-CSS/Mantas/namuose/css/main.css
@@ -39,13 +39,18 @@ nav ul li{
 .clear-float {
   clear: both;
 }
-#content {
+#wrapper {
+  display: inline-block;
   float: left;
+  width: 100%;
+}
+#content {
+  display: inline-block;
   width: 70%;
   background-color: white;
 }
 #sidebar {
   width: 26%;
   background-color: violet;
-  position: absolute;
+  display: inline-block;
 }
