--- a/uzduotys/uzduotis4/tautvydas/1/css/main.css
+++ b/uzduotys/uzduotis4/tautvydas/1/css/main.css
@@ -1,3 +1,22 @@
 h1 {
   color: red;
 }
+.perkrovimo-ikona {
+  color: red;
+  font-size: 50px;
+}
+
+.container, .container-fluid {
+  background-color: #EAEAEA;
+}
+
+.test {
+  background-color: #E6E6E6;
+  min-height: 300px;
+}
+.red {
+    background-color: #ffb;
+}
+.orange {
+    background-color: #ffd;
+}
