--- a/uzduotys/uzduotys3-CSS/zygis/3/css/main.css
+++ b/uzduotys/uzduotys3-CSS/zygis/3/css/main.css
@@ -6,3 +6,101 @@ body {
     background-size: auto 100%;
     
 }
+
+* {
+    padding: 0;
+    margin: 0;
+}
+
+.wrapper {
+    width: 50%;
+    background: linear-gradient(rgba(255, 255, 255, 0.6), rgba(255, 255, 255, 0.6));
+}
+
+.input-field {
+    width: 100%;
+    margin-bottom: 10px;
+}
+
+.email-field {
+    width: 100%;
+}
+
+.input-field, .email-field {
+    border: none;
+    border-bottom: 1px solid black;
+    height: 25px;
+    transition: 0.2s
+}
+
+.email-field:focus {
+    border: none;
+    border-bottom: 2px solid black;
+    outline: inherit;
+}
+
+.input-field:focus {
+    border: none;
+    border-bottom: 2px solid black;
+    outline: inherit;
+}
+
+label, h1, h2 {
+    text-transform: uppercase;
+}
+
+.wrapper, header {
+    margin: 5% 0 0 5%;
+}
+
+header {
+    width: 50%;
+}
+
+.explanation {
+    font-weight: bold;
+    font-size: 15px;
+    margin-bottom: 20px;
+}
+
+.sign-up-button {
+    height: 45px;
+    width: 25%;
+    margin-top: 20px;
+    background: none;
+    outline: #000 solid 3px;
+    border: none;
+    transition: 0.3s;
+    font-weight: bold;
+}
+
+.sign-up-button:hover{
+    background-color: #318ef0;
+    outline-color: #318ef0;
+    color: #fff;
+}
+
+.sign-up-button:active{
+    background-color: #0d3dce;
+    outline-color: #0d3dce;
+    color: #fff;
+}
+
+
+
+
+/*============================================================================================*/
+                                        /*MEDIA QUERIES*/
+/*============================================================================================*/
+
+@media (max-width: 320px) {
+    wrapper{
+        width: 100%;
+        margin: 0 auto;
+        text-align: center;
+    }
+    header{
+        text-align: center;
+        width: 100%;
+    }
+}
