--- a/uzduotys/uzduotis4/Mantas/2/css/main.css
+++ b/uzduotys/uzduotis4/Mantas/2/css/main.css
@@ -3,14 +3,14 @@
 }
 
 h1 {
-  color: red;
+  color: pink;
 }
 .sofa {
   color: pink;
   font-size: 50px;
 }
 .container {
-  background-color: #eaeaea;
+  background-color: #eaeae;
 }
 .red {
   background-color: red;
