--- a/uzduotys/uzduotis5/tautvydas/2/css/main.css
+++ b/uzduotys/uzduotis5/tautvydas/2/css/main.css
@@ -7,6 +7,7 @@ h1 {
 }
 h2 {
   padding-left: 20px;
+  margin: 0;
 }
 .perkrovimo-ikona {
   color: red;
@@ -16,7 +17,15 @@ h2 {
 .container, .container-fluid {
   background-color: #EAEAEA;
 }
-
+header {
+  margin-bottom: 15px;
+}
+footer {
+  margin-top: 15px;
+}
+#ads {
+  margin-top: 15px;
+}
 .test {
   background-color: #E6E6E6;
   min-height: 300px;
@@ -40,10 +49,14 @@ h2 {
    border: 2px solid red;
 }
 .aukstis {
-  min-height: 408px;
+  min-height: 408px ;
+}
+.ausktis-300 {
+  min-height: 300px;
 }
 .aukstis-200 {
     min-height: 200px;
-}.aukstis-100 {
+}
+.aukstis-100 {
     min-height: 100px;
 }
