--- a/uzduotys/uzduotis5/zygis/homework/page/css/main.css
+++ b/uzduotys/uzduotis5/zygis/homework/page/css/main.css
@@ -1,7 +1,13 @@
 html {
-    background: url(../images/Optimized-guitar-pedals.jpeg) no-repeat center fixed;
+    background: url(../images/Optimized-guitar-pedals.jpeg) no-repeat center center fixed;
     -webkit-background-size: cover;
     -moz-background-size: cover;
     -o-background-size: cover;
     background-size: cover;
+}
+
+header {
+    background: linear-gradient(rgba(0, 0, 0, 0.5), rgba(0, 0, 0, 0.5));
+    min-height: 100vh;
+    
 }
