--- a/uzduotys/uzduotys6/tautvydas/1-bootstrap-test/css/main.css
+++ b/uzduotys/uzduotys6/tautvydas/1-bootstrap-test/css/main.css
@@ -8,7 +8,7 @@ h1 {
 h2 {
   padding-left: 20px;
   margin: 0;
-} 
+}
 
 .container, .container-fluid {
   background-color: #EAEAEA;
@@ -55,4 +55,8 @@ footer {
 
 body, html {
     height: 100%;
+}
+h4:[title] {
+  background-color: #000;
+  color: #fff;
 }
