--- a/uzduotys/uzduotis5/zygis/homework/page/css/main.css
+++ b/uzduotys/uzduotis5/zygis/homework/page/css/main.css
@@ -6,7 +6,7 @@ html {
     background-size: cover;
 }
 
-header {
+body {
     background: linear-gradient(rgba(0, 0, 0, 0.5), rgba(0, 0, 0, 0.5));
     min-height: 100vh;
     
