--- a/uzduotys/uzduotys6/Simona_6/arune_simona/1-bootstrap-2/1.css
+++ b/uzduotys/uzduotys6/Simona_6/arune_simona/1-bootstrap-2/1.css
@@ -3,10 +3,11 @@ h2 {
 }
 
 .text-center {
-  color: #e2e2e2;
+  color: #000;
 }
 
 .container {
-  width: 300px;
-  height: 200px;
+  width: 1000px;
+  height: 400px;
+  background-color: #F0F0F0;
 }
