--- a/uzduotys/uzduotys6/andriuszygis/css/main.css
+++ b/uzduotys/uzduotys6/andriuszygis/css/main.css
@@ -67,6 +67,7 @@ body, html {
  header {
      height: 120px;
      border: 1px solid black;
+     margin-bottom: 15px;
  }
  
  nav {
@@ -106,13 +107,14 @@ body, html {
  .article {
      background-color: #e2e0de;
      padding: 0 10px;
-     margin-top: 15px;
+     /*margin-top: 15px;*/
  }
  
  
  
  .advert {
      margin-top: 15px;
+     margin-bottom: 15px;
      background: linear-gradient(rgba(255, 255, 255, 0.5), rgba(255, 255, 255, 0.5)), url(../asset/reklamos-paveikslas.jpeg) no-repeat center center scroll;
      height: 400px;
      text-align: center;
