--- a/uzduotys/uzduotys6/rutaindrius/css/main.css
+++ b/uzduotys/uzduotys6/rutaindrius/css/main.css
@@ -2,75 +2,53 @@
   box-sizing: border-box;
 }
 
-h1 {
-  color: red;
-}
-h2 {
-  padding-left: 20px;
-  margin: 0;
-}
-.perkrovimo-ikona {
-  color: red;
-  font-size: 50px;
-}
-
-.container, .container-fluid {
-  background-color: #EAEAEA;
-}
-header {
-  margin-bottom: 15px;
-}
-footer {
-  margin-top: 15px;
-}
-#ads {
-  margin-top: 15px;
-}
-.test {
-  background-color: #E6E6E6;
-  min-height: 300px;
-}
-.red {
-    background-color: #ffb;
-}
-.orange {
-    background-color: #ffd;
-}
-.green {
-  background-color: #00ff30;
-}
-.yellow {
-    background-color: rgb(255, 255, 0);
-}
-.white {
-  background-color: #fff;
-}
-.border {
-   border: 2px solid red;
-}
-.aukstis {
-  min-height: 408px ;
-}
-.ausktis-300 {
-  min-height: 300px;
-}
-.aukstis-200 {
-    min-height: 200px;
-}
-.aukstis-100 {
-    min-height: 100px;
-}
-
 body, html {
     height: 100%;
 }
-.backgroudn-img {
-  height: 100%;
-  width: 100%;
 
-    background: url("../img.jpg") no-repeat center center fixed;
-  -webkit-background-size: cover;
-  -moz-background-size: cover;
-  -o-background-size: cover;
-  background-size: cover;
+.footer {
+  background-color: #242D36;
+  height: 200px;
+  padding: 30px 0 30px 100px;
+  text-align: center;
+}
+
+.menu {
+  color: #EBF5FB;
+  text-align: left;
+}
+
+.logo {
+  height: 60px;
+  float: left;
+  margin: 10px 0 0 24px;
+
+}
+
+.image {
+  height: 140px;
+  float: right;
+  position: absolute;
+  margin-right: 0;
+}
+
+h2 {
+  text-align: center;
+}
+
+.imageSize {
+  height: 180px;
+}
+
+.farmImage {
+  height: 220px;
+}
+
+.ad {
+  margin: 32px;
+  background-color: silver;
+}
+
+.gallery {
+  margin: 26px;
 }
