--- a/uzduotys/uzduotys6/rutaindrius/css/main.css
+++ b/uzduotys/uzduotys6/rutaindrius/css/main.css
@@ -2,75 +2,49 @@
   box-sizing: border-box;
 }
 
-h1 {
-  color: red;
-}
-h2 {
-  padding-left: 20px;
-  margin: 0;
-}
-.perkrovimo-ikona {
-  color: red;
-  font-size: 50px;
-}
 
-.container, .container-fluid {
-  background-color: #EAEAEA;
-}
-header {
-  margin-bottom: 15px;
-}
-footer {
-  margin-top: 15px;
-}
-#ads {
-  margin-top: 15px;
-}
-.test {
-  background-color: #E6E6E6;
-  min-height: 300px;
-}
-.red {
-    background-color: #ffb;
-}
-.orange {
-    background-color: #ffd;
-}
-.green {
-  background-color: #00ff30;
-}
-.yellow {
-    background-color: rgb(255, 255, 0);
-}
-.white {
-  background-color: #fff;
-}
-.border {
-   border: 2px solid red;
-}
-.aukstis {
-  min-height: 408px ;
-}
-.ausktis-300 {
-  min-height: 300px;
-}
-.aukstis-200 {
-    min-height: 200px;
-}
-.aukstis-100 {
-    min-height: 100px;
-}
 
 body, html {
     height: 100%;
-}
-.backgroudn-img {
-  height: 100%;
-  width: 100%;
 
-    background: url("../img.jpg") no-repeat center center fixed;
-  -webkit-background-size: cover;
-  -moz-background-size: cover;
-  -o-background-size: cover;
+}
+ul li {
+  float: left;
+  width: 200px;
+  height: 40px;
+  text-align: center;
+  font-size: 20px;
+  margin-right: 2px;
+list-style: none;
+}
+img {
+  max-width: 100px;
+  max-width: 100px;
+
+}
+.img1 {
+  max-width: 200px;
+  max-width: 200px;
+}
+
+h1 {
+  text-align: center;
+}
+.reklama{
+  position: relative;
+  height: 300px;
   background-size: cover;
+  background-image:
+   url(https://cdn1.techadvisor.co.uk/cmsdata/features/3607615/Android_thumb800.jpg);
+}
+.reklamos {
+position: absolute;
+top: 50%;
+transform: translate(-50%, -50%);
+left: 50%;
+border: solid 1px;
+background-color: orange;
+}
+scetion {
+  position: relative;
 }
