--- a/uzduotys/uzduotys6/Simona_6/arune_simona/1-bootstrap-2/1.css
+++ b/uzduotys/uzduotys6/Simona_6/arune_simona/1-bootstrap-2/1.css
@@ -1,7 +1,11 @@
 h2 {
-  color: red;
+  color: #657e5d;
+  text-align: center;
 }
 
+h1 {
+
+}
 .text-center {
   color: #000;
 }
@@ -10,4 +14,36 @@ h2 {
   width: 1000px;
   height: 400px;
   background-color: #F0F0F0;
+  border:1px;
+  border-color: #ed8e5c;
+}
+img {
+  width: 100%;
+  height: auto;
+}
+
+.img-circle {
+  width: 200px;
+  heigh: 200px;
+}
+
+footer {
+  height: 200px;
+}
+
+.ads {
+  background-color: #9ba475;
+  height: 400px;
+  position: relative;
+}
+.logo {
+  width: 10%;
+  margin: 20px;
+
+}
+.reklamos-btn {
+  position: absolute;
+  top: 50%;
+  transform: translate(-50%, -50%);
+  left: 50%;
 }
