--- a/uzduotys/uzduotys6/nerijuslukas/1-bootstrap-test/css/main.css
+++ b/uzduotys/uzduotys6/nerijuslukas/1-bootstrap-test/css/main.css
@@ -38,11 +38,18 @@ h2 {
 .reklamos-btn {
   position: absolute;
   top: 50%;
-  transform: translate(-5%, -50%);
+  transform: translate(-50%, -50%);
   left: 50%;
 }
 .mygtukas {
   height: 400px;
   width: 100%;
   position: relative;
+}
+
+.background {
+  background-image: url("../beach.jpg");
+  background-repeat: no-repeat;
+  background-position: center;
+  background-size: cover;
 }
