--- a/uzduotys/uzduotys6/tautvydastomas/komandine/css/main.css
+++ b/uzduotys/uzduotys6/tautvydastomas/komandine/css/main.css
@@ -5,6 +5,7 @@
 body, html {
     height: 100%;
 }
+/* --------------------*/
 
 h1 {
   color: red;
@@ -12,6 +13,32 @@ h1 {
 .container, .container-fluid {
   background-color: #EAEAEA;
 }
+.logo {
+  width: 5%;
+  margin: 20px;
+}
+.desinen {
+  float: right;
+}
+.tekstai {
+  margin-left: 30px;
+  margin-right: 30px;
+}
+.ads {
+  height: 400px;
+  width: 100%;
+  position: relative;
 
-
+    background: url("../img/img.jpg") no-repeat center center fixed;
+  -webkit-background-size: cover;
+  -moz-background-size: cover;
+  -o-background-size: cover;
+  background-size: cover;
+}
  
+.reiklamos-btn {
+  position: absolute;
+  top: 50%;
+   transform: translate(-50%, -50%);
+   left: 50%;
+}
