--- a/uzduotys/uzduotys6/rutaindrius/css/main.css
+++ b/uzduotys/uzduotys6/rutaindrius/css/main.css
@@ -2,14 +2,12 @@
   box-sizing: border-box;
 }
 
-<<<<<<< HEAD
-
 
 body, html {
     height: 100%;
 
 }
-ul li {
+header ul li {
   float: left;
   width: 200px;
   height: 40px;
@@ -18,7 +16,8 @@ ul li {
   margin-right: 2px;
 list-style: none;
 }
-img {
+
+header img {
   max-width: 100px;
   max-width: 100px;
 
@@ -48,9 +47,6 @@ background-color: orange;
 }
 scetion {
   position: relative;
-=======
-body, html {
-    height: 100%;
 }
 
 .footer {
