--- a/uzduotys/uzduotis5/Paulius/sviezi html ir css failai/main.css
+++ b/uzduotys/uzduotis5/Paulius/sviezi html ir css failai/main.css
@@ -1,33 +1,54 @@
-.spalva {
-    background-color: darkturquoise;
-}
+
 
 .dydis {
+    height: 200px;
+    
+}
+
+.zaliux {
+    z-index: -1;
+    position: absolute;
+    left: 20%;
+    bottom: 15%;
+}
+
+body {
+    color: white;
+}
+
+.maziau {
+    width: 100px;
+    height: 100px;
+    position: absolute;
+    left: 40%;
+    top: -50%
+}
+
+.logo {
     height: 50px;
+    width: 60px;
+    position: absolute;
+    left: 50%;
+    transform: translate(-50%; -50%)
+    
+}   
+
+header {
+    background-color: #6ea816;
+    
 }
 
-
-p bg-info {
-    color:red;
+li {
+    font-size: 15px;
+    display: inline;
+    margin-left: 60px;
+    line-height: 48px;
+    font-weight: 700;
+    
+    
 }
 
-
-.quadrat {
-  width: 50px;
-  height: 50px;
- -webkit-animation: NAME-YOUR-ANIMATION 1s infinite; /* Safari 4+ */
-  -moz-animation:    NAME-YOUR-ANIMATION 1s infinite; /* Fx 5+ */
-  -o-animation:      NAME-YOUR-ANIMATION 1s infinite; /* Opera 12+ */
-  animation:         NAME-YOUR-ANIMATION 0.2s infinite; /* IE 10+, Fx 29+ */
+li:hover {
+    color: coral;
 }
 
-@-webkit-keyframes NAME-YOUR-ANIMATION {
-0%, 49% {
-    background-color: rgb(117,209,63);
-    border: 3px solid #e50000;
-}
-50%, 100% {
-    background-color: #e50000;
-    border: 3px solid rgb(117,209,63);
-}
-}
