--- a/uzduotys/uzduotis7/Paulius/MAMP/uzduotis2/main.css
+++ b/uzduotys/uzduotis7/Paulius/MAMP/uzduotis2/main.css
@@ -4,11 +4,15 @@
     
 }
 
+article {
+    border: solid 1px;
+    margin: 10px;
+}
 div {
     margin: 10px;
 }
 
-.brown {
+ul {
     background-color: rosybrown;
     
 }
@@ -20,7 +24,7 @@ div {
 }
 
 .green {
-    background-color: greenyellow;
+    background-color:burlywood
 }
 
 .orange {
