--- a/uzduotys/uzduotis1/Simona/Projektas/bootstrap1/css/main.css
+++ b/uzduotys/uzduotis1/Simona/Projektas/bootstrap1/css/main.css
@@ -7,31 +7,24 @@ body {
 }
 
 /*MAIN MENU*/
-.menu {
+/*.menu {
   overflow: hidden;
   background-color: #343434;
+  display: inline-block;
+  position: absolute;
   width: auto;
-  position: relative;
-}
-
-.nav, .navbar {
-  background-color: #e2e2e2;
-
-}
-
-/*.col-xs-1 {
-float: right;
-margin-top: 1.5%;
 }*/
+
 /*END OF MAIN MENU*/
 
 /*CONTAINERS*/
-.container-fluid {
+.pirmas{
   background-image: url('../../pictures/papartis.jpg');
   background-repeat: no-repeat;
   position: relative;
   background-position: center;
   background-attachment: fixed;
+  margin-top: -25px;
 }
 
 .antras {
@@ -106,8 +99,8 @@ padding-top: 1%;
   }
 
   .ranka {
-    margin-top: 50px;
-    margin-left: 150px;
+    margin-top: 40px;
+    margin-left: 175px;
   }
 /*END OF FOOTER*/
 
@@ -140,20 +133,20 @@ h9 {
 /*REMELIS*/
 .remelis {
   border: solid 6px rgba(255, 255, 255, 0.5);
-  width: 1300px;
-  height: 570px;
+  width: 1257px;
+  height: 515px;
   margin-top: 3.5%;
   margin-left: 2%;
 }
 
 /*PERMATOMAS STULPELIS*/
-.col-xs-9 {
+.col-xs-11 {
   background: rgba(255, 255, 255, 0.4);
-  width: 1389px;
-  height: 660px;
+  width: 1350px;
+  height: 607px;
   margin-top: 3%;
-  margin-left: 5%;
-  margin-bottom: 4%;
+  margin-left: 6%;
+  margin-bottom: 3%;
 }
 
 .article {
@@ -172,7 +165,8 @@ h9 {
   background-repeat: no-repeat;
   display: inline-block;
   position: absolute;
-  margin-left: 604px;
+  margin-left: 605px;
+  margin-top: -2.5%;
 }
 .paw:hover {
   background-image: url('../../icons/bear96.png');
@@ -181,7 +175,7 @@ h9 {
 
 .triforce {
   position: absolute;
-  margin-top: 6%;
+  margin-top: 3.5%;
   margin-left: 500px;
 }
 
@@ -193,8 +187,8 @@ h9 {
   background-repeat: no-repeat;
   display: inline-block;
   position: absolute;
-  margin-top: 23.8%;
-  margin-left: 390px;
+  margin-top: 22%;
+  margin-left: 400px;
 }
 .mushroom:hover {
   background-image: url('../../icons/mushroom96.png');
@@ -209,7 +203,7 @@ h9 {
   background-repeat: no-repeat;
   display: inline-block;
   position: absolute;
-  margin-top: 25%;
+  margin-top: 23%;
   margin-left: 810px;
 }
 .leaf:hover {
@@ -218,14 +212,7 @@ h9 {
 }
 /*END OF CENTER ICONS*/
 
-
-
-
-/*END OF RIGHT MENU*/
-
-
 /*ABOUT page*/
-
 .about {
   font-size: 21px;
   color: #fff;
@@ -233,7 +220,6 @@ h9 {
   height: auto;
   padding: 4%;
 }
-
 
 /*END OF ABOUT PAGE*/
 
@@ -245,7 +231,6 @@ h9 {
 
 
 /*SEARCH PAGE*/
-
 .search {
   border: solid 0.5px #fff;
   width: 1390px;
@@ -311,7 +296,6 @@ h4 {
 
 
 /*ANIMALS CAPTION*/
-
 .owl {
   height: 100px;
   width: 100px;
@@ -321,7 +305,7 @@ h4 {
   display: inline-block;
   position: absolute;
   margin-top: 2.5%;
-  margin-left: 150px;
+  margin-left:  400px;
 }
 
 .owl:hover {
@@ -338,7 +322,7 @@ h4 {
   display: inline-block;
   position: absolute;
   margin-top: 4.1%;
-  margin-left: 450px;
+  margin-left: 100px;
 }
 
 .frog:hover {
@@ -354,8 +338,8 @@ h4 {
   background-repeat: no-repeat;
   display: inline-block;
   position: absolute;
-  margin-top: 2.5%;
-  margin-left: 790px;
+  margin-top: 2.8%;
+  margin-left: 750px;
 }
 
 .rabbit:hover {
@@ -372,7 +356,7 @@ h4 {
   display: inline-block;
   position: absolute;
   margin-top: 4.5%;
-  margin-left: 1110px;
+  margin-left: 1050px;
 }
 
 .turtle:hover {
@@ -388,8 +372,8 @@ h4 {
   background-repeat: no-repeat;
   display: inline-block;
   position: absolute;
-  margin-top: 13%;
-  margin-left: 290px;
+  margin-top: 11%;
+  margin-left: 250px;
 }
 
 .slug:hover {
@@ -406,7 +390,7 @@ h4 {
   display: inline-block;
   position: absolute;
   margin-top: 12%;
-  margin-left: 950px;
+  margin-left: 900px;
 }
 
 .snail:hover {
@@ -422,8 +406,8 @@ h4 {
   background-repeat: no-repeat;
   display: inline-block;
   position: absolute;
-  margin-top: 23%;
-  margin-left: 450px;
+  margin-top: 19%;
+  margin-left: 400px;
 }
 
 .crab:hover {
@@ -439,8 +423,8 @@ h4 {
   background-repeat: no-repeat;
   display: inline-block;
   position: absolute;
-  margin-top: 24%;
-  margin-left: 150px;
+  margin-top: 20%;
+  margin-left: 105px;
 }
 
 .fish:hover {
@@ -456,8 +440,8 @@ h4 {
   background-repeat: no-repeat;
   display: inline-block;
   position: absolute;
-  margin-top: 23%;
-  margin-left: 795px;
+  margin-top: 19%;
+  margin-left: 745px;
 }
 
 .insect:hover {
@@ -472,21 +456,45 @@ h4 {
   background-position: center;
   background-repeat: no-repeat;
   position: absolute;
-  margin-top: 24%;
-  margin-left: 1120px;
+  margin-top: 20%;
+  margin-left: 1060px;
 }
 
 .spiderweb:hover {
   background-image: url('../../icons/spider70.png');
   transition: .7s ease;
 }
-
-
 /*END OF ANIMALS CAPTION*/
 
+/* APRASYMAI */
+.col-xs-10 {
+  background: rgba(255, 255, 255, 0.4);
+  width: 1179px;
+  height: 607px;
+  margin-top: 3%;
+  margin-left: 17%;
+  margin-bottom: 3%;
+}
+
+.remelis2 {
+  border: solid 6px rgba(255, 255, 255, 0.5);
+  width: 1090px;
+  height: 515px;
+  margin-top: 4%;
+  margin-left: 2%;
+}
+
+.remelis3 {
+  border: solid 6px rgba(255, 255, 255, 0.5);
+  width: 310px;
+  height: 425px;
+  margin-top: 11%;
+  margin-right: 3%;
+}
+
+/* END OF APRASYMAI */
 
 /*PAGE END*/
-
 .mouse {
   padding-left: 750px;
   bottom: 28px;
