--- a/uzduotys/MAMP/PROJEKTAI/Simona/bootstrap1/css/main.css
+++ b/uzduotys/MAMP/PROJEKTAI/Simona/bootstrap1/css/main.css
@@ -20,7 +20,7 @@ body {
 
 /*CONTAINERS*/
 .pirmas{
-  background-image: url('../../pictures/papartis.jpg');
+  background-image: url('../../wall_pics/papartis.jpg');
   background-repeat: no-repeat;
   position: relative;
   background-position: center;
@@ -38,12 +38,14 @@ body {
 }
 
 .trecias {
-  background-image: url('../../pictures/zieve.jpg');
+  background-image: url('../../wall_pics/zieve.jpg');
   background-repeat: no-repeat;
   position: relative;
   background-position: center;
   background-attachment: fixed;
   width: auto;
+  height: 500px;
+  padding-top: 4%;
 }
 
 .ketvirtas {
@@ -61,22 +63,28 @@ body {
   position: relative;
   background-position: center;
   width: auto;
-  height: 540px;
+  height: auto;
 }
 
 .contacts {
-padding-left: 530px;
-padding-top: 1%;
-}
+  background: rgba(255, 255, 255, 0.2);
+  width: 1390px;
+  height: 460px;
+  margin-top: 4%;
+  margin-left: 4%;
+  margin-bottom: 4%;
+  padding-left: 530px;
+  padding-top: 1%
+  }
 
 .form-control {
   width: 40%;
-  padding: 12px;
+  /*padding-bottom: 1px;*/
   border: 1px solid #ccc;
   border-radius: 4px;
   box-sizing: border-box;
   margin-top: 6px;
-  margin-bottom: 16px;
+  margin-bottom: 6px;
   resize: vertical;
 }
 
@@ -87,7 +95,7 @@ padding-top: 1%;
   border-radius: 4px;
   cursor: pointer;
 }
-/*END OF CONTACTS*/
+/*END OF CONTACTS
 
 /*FOOTER */
   .footeris {
@@ -96,11 +104,32 @@ padding-top: 1%;
     position: relative;
     background-position: center;
     width: auto;
-    height: 190px;
+    height: 150px;
+  }
+
+  .footeriukas {
+    background-color: #232E35;
+    background-repeat: no-repeat;
+    position: relative;
+    background-position: center;
+    width: auto;
+    height: 40px;
+  }
+
+  .foot-text {
+    color: #fff;
+    margin-left: 160px;
+    margin-top: 15%;
+  }
+
+  .foot-textukas {
+    color: #fff;
+    text-align: center;
+    margin-top: 0.7%;
   }
 
   .ranka {
-    margin-top: 40px;
+    margin-top: 15px;
     margin-left: 175px;
   }
 /*END OF FOOTER*/
@@ -117,11 +146,6 @@ h2 {
 padding-left: 100px;
 }
 
-.foot-text {
-  color: #fff;
-  margin-top: 110px;
-  margin-left: 160px;
-}
 
 h9 {
   font-size: 10px;
@@ -141,8 +165,9 @@ h9 {
 }
 
 /*PERMATOMAS STULPELIS*/
-.col-xs-11 {
+.permatomas {
   background: rgba(80, 80, 80, 0.4);
+  position: relative;
   width: 1350px;
   height: 607px;
   margin-top: 3%;
@@ -166,8 +191,8 @@ h9 {
   background-repeat: no-repeat;
   display: inline-block;
   position: absolute;
-  margin-left: 605px;
-  margin-top: -2.5%;
+  margin-top: 3%;
+  margin-left: 45%;
 }
 .paw:hover {
   background-image: url('../../icons/ipaw70.png');
@@ -176,8 +201,8 @@ h9 {
 
 .triforce {
   position: absolute;
-  margin-top: 3.5%;
-  margin-left: 500px;
+  margin-top: 9%;
+  margin-left: 37%;
 }
 
 .mushroom {
@@ -188,8 +213,8 @@ h9 {
   background-repeat: no-repeat;
   display: inline-block;
   position: absolute;
-  margin-top: 22%;
-  margin-left: 400px;
+  margin-top: 26%;
+  margin-left: 29%;
 }
 .mushroom:hover {
   background-image: url('../../icons/imushroom75.png');
@@ -204,8 +229,8 @@ h9 {
   background-repeat: no-repeat;
   display: inline-block;
   position: absolute;
-  margin-top: 23%;
-  margin-left: 810px;
+  margin-top: 27%;
+  margin-left: 61%;
 }
 .leaf:hover {
   background-image: url('../../icons/ileaf70.png');
@@ -220,6 +245,30 @@ h9 {
   width: 1550px;
   height: auto;
   padding: 4%;
+}
+
+.aprasymas {
+  text-align: justify;
+  text-justify: inter-word;
+  background-color: rgba(80, 80, 80, 0.9);
+  margin: 1%;
+
+}
+
+.geltonas {
+  border: solid 30px #ffc602;
+  width: 250px;
+  height: 300px;
+  margin-top: 4%;
+  margin-left: 6%;
+}
+
+.article-1 {
+  background-color: #343434;
+  width: 300px;
+  height: 240px;
+  padding-top: 27%;
+  padding-left: 23%;
 }
 
 /*END OF ABOUT PAGE*/
@@ -276,24 +325,7 @@ h4 {
 .col5 {
   margin-top: 12%;
 }
-
-
 /*END OF SEARCH PAGE*/
-
-
-/*CONTACTS PAGE*/
-
-.contacts {
-  background: rgba(255, 255, 255, 0.2);
-  width: 1390px;
-  height: 660px;
-  margin-top: 4%;
-  margin-left: 4%;
-  margin-bottom: 4%;
-}
-
-
-/*END OF CONTACTS PAGE*/
 
 
 /*ANIMALS CAPTION*/
@@ -471,16 +503,16 @@ h4 {
 .col-xs-9 {
   background: rgba(80, 80, 80, 0.6);
   width: 1179px;
-  height: 607px;
+  height: 567px;
   margin-top: 3%;
-  margin-left: 1%;
+  margin-left: 3%;
   margin-bottom: 3%;
 }
 
 .col-xs-1 {
   background: rgba(80, 80, 80, 0.4);
-  width: 150px;
-  height: 607px;
+  width: 180px;
+  height: 567px;
   margin-top: 3%;
   margin-left: 1%;
   margin-bottom: 3%;
@@ -491,9 +523,9 @@ h4 {
 .remelis2 {
   border: solid 6px rgba(255, 255, 255, 0.5);
   width: 1090px;
-  height: 515px;
-  margin-top: 4%;
-  margin-left: 2%;
+  height: 500px;
+  margin-top: 3%;
+  margin-left: 2.5%;
 }
 
 .remelis3 {
@@ -503,13 +535,35 @@ h4 {
   margin-top: 11%;
   margin-right: 3%;
 }
-
 /* END OF APRASYMAI */
 
-/*PAGE END*/
-.mouse {
-  padding-left: 750px;
-  bottom: 28px;
-  position: absolute;
-  align-items: center;
+/*GALERIJA*/
+div.gallery {
+    margin: 5px;
+    border: 4px solid #ccc;
+    float: left;
+    width: 180px;
+    background-color: #ccc;
+    transition: 0.4s;
 }
+
+div.gallery:hover {
+    border: 1px solid #777;
+}
+
+div.gallery img {
+    width: 100%;
+    height: auto;
+}
+
+div.desc {
+    padding: 16px;
+    text-align: center;
+}
+/*END OF GALLERY*/
+
+/*KONTAKTAI*/
+
+
+
+/*PAGE END*/
